--- a/init.hardware.rc
+++ b/init.hardware.rc
@@ -52,6 +52,24 @@ on early-init
     # Enable sched_boost
     write /proc/sys/kernel/sched_boost 1
     mount_all /vendor/etc/fstab.persist --early
+    
+    # mount schedtune and blkio together in "on early-init",
+    # so that mount schedtune in init.rc will fail
+    mkdir /dev/stune
+    mount cgroup none /dev/stune nodev noexec nosuid schedtune,blkio
+    
+    mkdir /dev/stune/foreground
+    mkdir /dev/stune/background
+    mkdir /dev/stune/top-app
+    mkdir /dev/stune/rt
+    
+# blkio init setting
+    write /dev/stune/blkio.group_idle 0
+    write /dev/stune/foreground/blkio.group_idle 0
+    write /dev/stune/background/blkio.group_idle 0
+    write /dev/stune/top-app/blkio.group_idle 0
+    write /dev/stune/rt/blkio.group_idle 0
+ 
 
 # Skip init trigger for charger mode
 on early-init && property:ro.boot.mode=charger
@@ -121,13 +139,11 @@ on init && property:vendor.skip.init=0
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor schedutil
     write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/up_rate_limit_us 500
     write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/down_rate_limit_us 20000
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 300000
 
     # configure governor settings for big cluster
     write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor schedutil
     write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/up_rate_limit_us 500
     write /sys/devices/system/cpu/cpu4/cpufreq/schedutil/down_rate_limit_us 20000
-    write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 825000
 
     # set default schedTune value for foreground/top-app
     write /dev/stune/foreground/schedtune.prefer_idle 1
@@ -596,6 +612,20 @@ on property:sys.boot_completed=1
     write /dev/cpuset/application/performance/cpus 4-5
     write /dev/cpuset/application/background/cpus 0-1
     write /dev/cpuset/application/cpus 0-1,4-5
+    
+    
+    # Setup final blkio
+     write /dev/stune/blkio.group_idle 0
+    write /dev/stune/foreground/blkio.group_idle 1
+    write /dev/stune/background/blkio.group_idle 0
+    write /dev/stune/top-app/blkio.group_idle 2
+    write /dev/stune/rt/blkio.group_idle 2
+
+	write /dev/stune/blkio.weight 10
+    write /dev/stune/foreground/blkio.weight 100
+    write /dev/stune/background/blkio.weight 10
+    write /dev/stune/top-app/blkio.weight 1000
+    write /dev/stune/rt/blkio.weight 1000
 
     # Runtime fs tuning: as we have init boottime setting and kernel patch setting
     # default readahead to 2048KB. We should adjust the setting upon boot_complete
